@startuml Diagrama_de_clases_zona

class Zone{
    - name
    - location : Location
    - delivery : Delivery
    - radius
    + new()
    + getName()
    + getLocation()
    + setName()
    + setLocation()
    + getRadius()
    + setRadius()
    + getDelivery()
    + setDelivery()
}
class Delivery{
    - location : Location
    - radius
    - status: Status
    + new()
    + getRadius()
    + setRadius()
    + getStatus()
    + setStatus()
    + getLocation()
    + setLocation()
    + getDelivery()
    + setDelivery()
    + getStatus()
    + setStatus()
}
class Location{
    - latitud
    - longitud
    + new()
    + getLatitud()
    + getLongitud()
    + setLatitud()
    + setLongitud()
}

class Status{
    - name
    - description
    + new()
    + getName()
    + getDescription()
    + setName()
    + setDescription()

}

Zone --> Location
Zone -> Delivery
Delivery -> Status
@enduml

@startuml Diagrama de Entidad Relacion

entity Delivery{
    -id<<PK>>
    -address
    -personID
    -radius
    -statusID<<FK>>
    -locationID<<FK>>
}

entity DeliveryZones{
    -id<<PK>>
    -deliveryID<<FK>>
    -zoneID<<FK>>
}

entity Zone {
    -id<<PK>>
    -name
    -radius
    -locationID<<FK>>
}

entity Location{
    -id<<PK>>
    -lat
    -lng
}

entity DeliveryStatus{
    -id<<PK>>
    -name
}

Delivery }|--|| DeliveryStatus
Delivery ||--|| Location

DeliveryZones }|--|| Delivery
DeliveryZones }|--|| Zone

Zone ||--|| Location
@enduml